--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  Cemu-2.0.tar.gz: 14e987fe850e24b1bba0e326d868d1093e3873b4
+  Cemu-2.0-47.tar.gz: e4b53a9e32cbf9c215bb518f1fb52b056caeec10
