--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  Cemu-2.0-47.tar.gz: e4b53a9e32cbf9c215bb518f1fb52b056caeec10
+  Cemu-2.1.tar.gz: 03f4cec1b7437a79594bbda9c1d9215bc0ae688c
