--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
 sources:
   Cemu-2.1.tar.gz: 03f4cec1b7437a79594bbda9c1d9215bc0ae688c
+  imgui.tar.gz: 93743cc7a11c3ea0beb6190bb9e1cf07275bb24a
+  zarchive.tar.gz: 0c92d9ef866cf60602eb6e8d7deafbc8a3df5fc8
